// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyleSheet/createReactDOMStyle fontFamily "Noto, BlinkMacSystemFont" 1`] = `
Object {
  "fontFamily": "Noto, BlinkMacSystemFont",
}
`;

exports[`StyleSheet/createReactDOMStyle fontFamily "Noto, System" 1`] = `
Object {
  "fontFamily": "Noto, system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Ubuntu, \\"Helvetica Neue\\", sans-serif",
}
`;

exports[`StyleSheet/createReactDOMStyle fontFamily "Noto, System" 2`] = `
Object {
  "font": "14px Noto, system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Ubuntu, \\"Helvetica Neue\\", sans-serif",
}
`;

exports[`StyleSheet/createReactDOMStyle fontFamily "System" 1`] = `
Object {
  "fontFamily": "system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Ubuntu, \\"Helvetica Neue\\", sans-serif",
}
`;

exports[`StyleSheet/createReactDOMStyle fontFamily "System" 2`] = `
Object {
  "font": "14px system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Ubuntu, \\"Helvetica Neue\\", sans-serif",
}
`;

exports[`StyleSheet/createReactDOMStyle fontFamily "monospace" 1`] = `
Object {
  "fontFamily": "monospace, monospace",
}
`;

exports[`StyleSheet/createReactDOMStyle fontFamily general case 1`] = `
Object {
  "fontFamily": "Georgia, Times, serif",
}
`;

exports[`StyleSheet/createReactDOMStyle shortform -> longform 1`] = `
Object {
  "borderBottomColor": "rgba(255,255,255,1.00)",
  "borderBottomStyle": "solid",
  "borderBottomWidth": "1px",
  "borderLeftStyle": "solid",
  "borderLeftWidth": "0px",
  "borderRightStyle": "solid",
  "borderRightWidth": "0px",
  "borderTopStyle": "solid",
  "borderTopWidth": "0px",
  "boxSizing": "border-box",
  "marginBottom": "25px",
  "marginLeft": "10px",
  "marginRight": "10px",
  "marginTop": "50px",
  "overflowX": "hidden",
  "overflowY": "hidden",
  "overscrollBehaviorX": "contain",
  "overscrollBehaviorY": "contain",
}
`;
